# mira-okf

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_improvement.md
.github/workflows/: quality.yml
bundles/: Going Open Source Roadmap.md  Tooling Overview.md  Tooling Roadmap.md  index.md  log.md
bundles/architecture/: Architecture Overview.md  Command Flows.md  Data Contracts.md  Discovery and Resolution.md  Health Report Contract.md  Incremental Plan and Risks.md  Links Command Contract.md  List Command Contract.md  List Result Windowing.md  OKF Boundaries.md  Output and Errors.md  Semantic Analysis Boundary.md  Test Strategy.md  Validation Report Contract.md  index.md  log.md
bundles/features/: Feature - OKF Backlinks.md  Feature - OKF Concept List.md  Feature - OKF Health.md  Feature - OKF Links.md  Feature - OKF Show.md  Feature - OKF Validation.md  Feature - Summarized OKF Navigation.md  index.md
bundles/prds/: PRD - OKF Concept List.md  PRD - OKF Health.md  PRD - OKF Links.md  PRD - OKF Module.md  PRD - OKF Semantic Analysis Boundary.md  PRD - OKF Show.md  PRD - OKF Validation.md  PRD - Python Tooling Library and CLI.md  index.md
bundles/product/: index.md
bundles/prompts/: Prompt - OKF Semantic Analysis Boundary Implementation.md  Prompt - Tooling Architecture Definition.md  index.md
bundles/references/: index.md
bundles/spec-driven-development/: index.md
docs/: getting-started.md  index.md
docs/behavior/: data-contracts.md  discovery.md  index.md  okf-boundaries.md  okf-format.md  output-and-errors.md  overview.md  semantic-analysis.md
tests/: support.py  test_cli.py  test_cli_bootstrap.py  test_health.py  test_hidden_exclusion.py  test_links.py  test_lint.py  test_list.py  test_props.py  test_public_quality_gate.py  test_regression_visible_bundle.py  test_show.py  test_tree.py  test_validate.py
(+77 files in other folders)
